<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/bacground_color"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:divider="@drawable/devider"
    android:showDividers="middle"
    tools:context="com.lab1prod.Settings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textColor="@color/general_text_color"
        android:id="@+id/textView2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:paddingTop="@dimen/padding_top_on_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:textColor="@color/font_color"
            android:id="@+id/textView3" />
        <TextView
            android:id="@+id/def_sound"
            android:text="@string/default_sound"
            android:textColor="@color/font_color"
            android:layout_width="wrap_content"
            android:onClick="OnInputSound"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Switch
        android:paddingTop="@dimen/padding_top_on_controls"
        android:textColor="@color/font_color"
        android:id="@+id/notofications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:switchPadding="@dimen/switch_padding"
        android:checked="true"
        android:text="@string/notifications"
        android:textOff="@string/off"
        android:textOn="@string/on"/>


    <!--color picker component-->
    <RelativeLayout
        android:paddingTop="@dimen/padding_on_container"
        android:paddingBottom="@dimen/padding_on_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/color"
            android:textColor="@color/font_color"
            android:id="@+id/ColorTextView"
            android:paddingTop="@dimen/padding_on_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_color"
            android:id="@+id/btn_scan_qr"
            android:onClick="onSetColor"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <TextView
        android:paddingTop="@dimen/padding_on_container"
        android:id="@+id/advertisement"
        android:textColor="@color/font_color"
        android:text="@string/Advertisement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Switch
        android:paddingTop="@dimen/padding_on_container"
        android:textColor="@color/font_color"
        android:id="@+id/buy_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/instant"
        android:textOff="@string/off"
        android:paddingBottom="@dimen/padding_on_container"
        android:textOn="@string/on"/>

    <TextView
        android:paddingTop="@dimen/padding_on_container"
        android:textColor="@color/font_color"
        android:id="@+id/curr_date"
        android:clickable="true"
        android:onClick="onSetText"
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
