<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacground_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lab1prod.MainActivity"
    tools:showIn="@layout/app_bar_main">

        <RelativeLayout
            android:id="@+id/first"
            android:background="@color/tail_color"
            android:layout_marginTop="@dimen/cp"
            android:layout_marginLeft="@dimen/cp"
            android:layout_marginRight="@dimen/cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/edit_Image_padding"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Edit_node_image"
                android:src="@drawable/ic_action_edit"/>
            <EditText
                android:id="@+id/NodeTitle"
                android:hint="@string/node_title"
                android:textColorHint="@color/font_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/icon"
                android:textColor="@color/font_color"
                android:layout_alignBottom="@+id/icon">
            </EditText>
            <EditText
                android:id="@+id/node_desc"
                android:layout_below="@+id/NodeTitle"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/font_color"
                android:textColor="@color/font_color"
                android:hint="@string/node_desc"/>
        </RelativeLayout>

        <RelativeLayout
            android:background="@color/tail_color"
            android:layout_below="@+id/first"
            android:layout_marginTop="@dimen/cp"
            android:layout_marginLeft="@dimen/cp"
            android:layout_marginRight="@dimen/cp"
            android:paddingBottom="@dimen/cp"
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/font_color"
                android:text="@string/Some_cool_news" />
            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_action_share"
                android:layout_height="wrap_content"
                android:contentDescription="@string/share_image"
                android:layout_alignParentEnd="true" />-->

            <TextView
                android:id="@+id/text_area"
                android:text="@string/best_apps"
                android:textColor="@color/font_color"
                android:gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textArea_margin"
                android:layout_below="@+id/news" />

            <Spinner
                android:id="@+id/share_spinner"
                android:layout_width="wrap_content"
                android:background="@drawable/spunner_backround"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"></Spinner>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/third"
            android:background="@color/tail_color"
            android:layout_below="@+id/second"
            android:layout_marginTop="@dimen/cp"
            android:layout_marginLeft="@dimen/cp"
            android:layout_marginRight="@dimen/cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/haulmont_header"
                android:paddingBottom="25dp"
                android:text="@string/adv_haulmont"
                android:textColor="@color/font_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/cancel_image"
                android:src="@drawable/ic_action_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cancel_image"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_above="@+id/haulmont_desc" />
            <TextView
                android:id="@+id/haulmont_desc"
                android:text="@string/best_framework"
                android:textColor="@color/font_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/padding_on_container"
                android:layout_below="@+id/haulmont_header"
                android:layout_alignParentStart="true" />
            <Button
                android:id="@+id/buy_btn"
                android:text="@string/btn_buy"
                android:textColor="@color/font_color"
                android:background="@color/button_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/haulmont_desc"
                android:onClick="onCustomPhoneClick"
                android:layout_centerHorizontal="true" />
            <Button
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/btn_margin"
                android:textColor="@color/font_color"
                android:background="@color/button_color"
                android:layout_height="wrap_content"
                android:id="@+id/CustomActivity"
                android:text="@string/go_custom"
                android:layout_below="@+id/buy_btn"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>