<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/font_color"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lab1prod.PhoneActivity"
    tools:showIn="@layout/app_bar_phone">

    <RelativeLayout
        android:id="@+id/sim"
        android:background="@color/first_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cont_logo"
            android:src="@drawable/sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/support"
            android:layout_toRightOf="@+id/cont_logo"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="@dimen/custom_margin"
            android:text="@string/support_two_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/change_sim"
            android:layout_below="@+id/support"
            android:gravity="left"
            android:layout_toRightOf="@id/cont_logo"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:src="@drawable/sim_cancel"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/alex"
        android:layout_below="@+id/sim"
        android:layout_marginTop="@dimen/phone_container_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/alex_image"
            android:src="@drawable/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/alex_name"
            android:text="@string/alex_er"
            android:layout_toRightOf="@+id/alex_image"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="@dimen/custom_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/alex_time"
            android:src="@drawable/alex_time"
            android:layout_below="@+id/alex_name"
            android:layout_toRightOf="@+id/alex_image"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/alex_sim_dots"
            android:src="@drawable/sim_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/alex_num"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/alex_num"
            android:text="@string/alex_num"
            android:layout_width="wrap_content"
            android:layout_below="@+id/alex_name"
            android:layout_toRightOf="@+id/alex_time"
            android:textSize="@dimen/custom_margin"
            android:layout_alignBottom="@+id/alex_time"
            android:layout_height="wrap_content"
             />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/val"
        android:layout_below="@+id/alex"
        android:layout_marginTop="@dimen/phone_container_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/val_logo"
            android:src="@drawable/val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/val_id"
            android:layout_toRightOf="@+id/val_logo"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textSize="@dimen/custom_margin"
            android:text="@string/val_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/val_time"
            android:src="@drawable/val_time"
            android:layout_toRightOf="@id/val_logo"
            android:layout_below="@+id/val_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/val_num"
            android:src="@drawable/val_numberjpg"
            android:layout_below="@+id/val_id"
            android:layout_toRightOf="@+id/val_time"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/sim_val"
            android:src="@drawable/sim_dot"
            android:layout_width="wrap_content"
            android:layout_above="@+id/val_num"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/alex_two"
        android:layout_below="@+id/val"
        android:layout_marginTop="@dimen/phone_container_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ImageView
            android:src="@drawable/c"
            android:id="@+id/al_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textStyle="bold"
            android:layout_toRightOf="@+id/al_two"
            android:layout_margin="5dp"
            android:textSize="@dimen/custom_margin"
            android:text="@string/alex_er"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
